<?xml version="1.0"?>
<package format="2">
  <name>genforce</name>
  <version>0.0.1</version>
  <description>The genforce package</description>
  <maintainer email="your_email@todo.todo">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
